--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html{
 }
 body{
    background: ghostwhite;
+ /*   background-image: url("для-еколога.png") ;*/
+    background-size: auto;
+    background-repeat: no-repeat;
     margin:0px;
 }
 .whole_area{
@@ -26,8 +29,9 @@ body{
 .first_table{
     display: inline-block;
     padding: 14px;
-    width: 836px; /*не поміщається*/
-
+    width: 836px;
+    height: auto;
+    vertical-align: top;
 }
 
 .first_table_centre{
@@ -38,8 +42,9 @@ body{
 }
 
 .second_table{
-    padding: 14px;
     display: inline-block;
+    vertical-align: top;
+    padding: 14px;
     width: 377px;
 }
 
@@ -60,13 +65,19 @@ body{
 }
 
 .line_of_table1{
-    height: 80px;
+
+}
+
+.centre_line_of_table1 {
+    height: auto;
     width: 834px;
-    padding: 14px;
     box-sizing: border-box;
     position: relative;
+    padding: 14px;
+    align-items: center;
     border-top: 1px solid black;
-}
+ }
+
 
 .top_line_of_table2{
     height: 80px;
@@ -86,7 +97,6 @@ body{
     position: relative;
     border-top: 1px solid black;
     line-height: 20px;
-    padding: 14px;
 }
 
 .centre_of_top_line1{
@@ -95,17 +105,9 @@ body{
     position: relative;
     text-size-adjust: 100%;
     height: 100%;
-    box-sizing: border-box;
-}
-
-.centre_of_line1 {
-    margin: -14px;
-    height: 100%;
     position: relative;
-    align-items: center;
-    height: 100%;
-
 }
+
 
 .cell_name_of_goods{
     display: inline-block;
@@ -145,7 +147,7 @@ body{
     text-align: right;
 }
 
-.big_text_area{
+#big_text_area{
     padding-top: 9.501px;
     padding-bottom: 9.501px;
     padding-right: 14px;
@@ -153,7 +155,6 @@ body{
     border: 1px solid gainsboro;
     cursor: auto;
     width: 85%;
-
 }
 
 .add{
@@ -161,7 +162,6 @@ body{
     background-color: rgb(33, 133, 208);
     vertical-align: middle;
     border-bottom-right-radius: 4px;
-
     box-shadow: rgba(34, 36, 38, 0.15) 0px -0.3em 0px 0px inset;
     text-align: center;
     position: relative;
@@ -170,11 +170,7 @@ body{
     color: white;
     box-sizing: border-box;
     font-weight: bold;
-
-}
-
-.list_to_buy{
-
+    outline: none;
 }
 
 .name_of_bought_good{
@@ -183,7 +179,12 @@ body{
     text-align: center;
     text-size-adjust: 100%;
 }
+
 .one_bought_good{
+    display: inline-block;
+}
+
+.label_js{
     align-items: flex-start;
     box-sizing: border-box;
     padding-top: 5.250px;
@@ -202,6 +203,8 @@ body{
     display: inline-block;
 
 }
+
+
 .count_of_bought_good{
     box-sizing: border-box;
     padding: 4.5px;
@@ -244,6 +247,7 @@ body{
     font-weight: bold;
     border: none;
     text-decoration-style: solid;
+    outline: none;
 }
 
 .count_of_good{
@@ -285,9 +289,10 @@ body{
     text-align: center;
     border: none;
     font-weight: bold;
+    outline: none;
 }
 
-.bought{
+.buy{
     padding-top: 10px;
     padding-bottom: 11.5px;
     padding-right: 20px;
@@ -307,6 +312,7 @@ body{
     border: none;
     color:rgba(0, 0, 0, 0.6);
     box-sizing: border-box;
+    outline: none;
 }
 
 .cross{
@@ -331,6 +337,7 @@ body{
     color: white;
     box-sizing: border-box;
     background: red;
+    outline: none;
 
 }
 
@@ -382,12 +389,12 @@ body{
 }
 
 @media (max-width: 600px){
-    .left-column {
-        width: 100%;
+    .first_table {
+        display: block;
     }
 
-    .right-column {
-        width: 100%;
+    .second_table {
+        display: block;
     }
 }
 
@@ -414,4 +421,5 @@ body{
     opacity: 1; /* Показываем его */
     visibility: visible;
 }
+
 
