--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ html{
     width: auto;
     height: 100%;
 }
+h3{
+    font-size: 20px;
+}
 body{
    background: ghostwhite;
- /*   background-image: url("для-еколога.png") ;*/
     background-size: auto;
     background-repeat: no-repeat;
     margin:0px;
@@ -147,7 +149,7 @@ body{
     text-align: right;
 }
 
-#big_text_area{
+.big_text_area{
     padding-top: 9.501px;
     padding-bottom: 9.501px;
     padding-right: 14px;
@@ -229,7 +231,7 @@ body{
 
 .minus{
     align-items: flex-start;
-    background-color: red;
+    background-color: lightcoral;
     color: white;
     display: inline-block;
     font-size: 20px;
@@ -302,7 +304,7 @@ body{
     color:rgba(0, 0, 0, 0.6);
     display: inline-block;
     height: 40px;
-    width: 100px;
+    width: auto;
     background-color: rgb(248, 248, 248);
     vertical-align: middle;
     border-radius: 4px;
@@ -358,6 +360,15 @@ body{
     transition: all 1s ease; /*Устанавливает эффект перехода между двумя состояниями элемента,
     они могут быть определены с помощью псевдоэлемента :hover или :active*/
 }
+
+.appear{
+    display: inline-block;
+}
+
+.dissapear{
+    display: none;
+}
+
 .badge .title{
     font-size: 25px;
     padding-top: 10px;
@@ -388,7 +399,7 @@ body{
     }
 }
 
-@media (max-width: 600px){
+@media (max-width:500px) {
     .first_table {
         display: block;
     }
@@ -421,5 +432,4 @@ body{
     opacity: 1; /* Показываем его */
     visibility: visible;
 }
-
 
